[gd_scene load_steps=5 format=3 uid="uid://b47yrtlquuv0l"]

[ext_resource type="Script" path="res://script/enemy.gd" id="1_y3h2r"]
[ext_resource type="Texture2D" uid="uid://brnwce5eksj35" path="res://assets/characters/slime.png" id="2_3mqf3"]

[sub_resource type="CircleShape2D" id="CircleShape2D_tbl7q"]
radius = 11.0

[sub_resource type="CircleShape2D" id="CircleShape2D_dopqw"]
radius = 11.0454

[node name="emeny" type="CharacterBody2D" groups=["enemies"]]
script = ExtResource("1_y3h2r")
speed = 5.0

[node name="Sprite2D" type="Sprite2D" parent="."]
texture = ExtResource("2_3mqf3")
hframes = 6
vframes = 10

[node name="ClickArea" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="ClickArea" groups=["enemies"]]
position = Vector2(-3, -1)
shape = SubResource("CircleShape2D_tbl7q")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(-3, -1)
shape = SubResource("CircleShape2D_dopqw")
debug_color = Color(0.897576, 0.0333752, 0.760669, 0.42)

[node name="AnswerLabel" type="Label" parent="."]
offset_left = -64.0
offset_top = -30.0
offset_right = 60.0
offset_bottom = -7.0
text = "?"
horizontal_alignment = 1

[node name="AttackCooldownTimer" type="Timer" parent="."]
wait_time = 2.0
one_shot = true
